--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "merchant-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "seed": "node scripts/seedFirestore.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
