--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-location": "^19.0.7",
     "expo-notifications": "~0.28.0",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
@@ -30,6 +31,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "^1.26.18",
     "react-native-paper": "^5.11.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
